--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
+    "gulp-watch": "^4.3.11",
     "jshint": "^2.9.4"
   }
 }
